# CFD

Advection_problem/: qq  t1.txt  t2.txt
Advection_problem/HW4/: Advection_1D.f90  t1.txt  t2.txt
Advection_problem/HW4/Ques_10/: Advection_1D.f90
Advection_problem/HW4/Ques_12/: Advection_1D.f90  plot_upwind_secheme.m
Advection_problem/HW5/: Advection_1D.f90  find_slope.f90  fort.100  fort.80  plot_scheme.m  qq  tmp.m
Advection_problem/HW5/Question_13/: Advection_1D.f90  README  lax_wendroff_plot.m  t1.txt  t2.txt
Advection_problem/HW5/Question_14/: README
Diffusion_problem/: Transient_Laminar_Flow_FD_Code1.f90  Transient_Laminar_Flow_FD_Code1_myVersion.f90  inputOutput.f90  viscosity.f90
Diffusion_problem/HW1/HW1_1/: HW1_1.f90  HW1_1_plot.m  HW1_1_result.txt
Diffusion_problem/HW1/HW1_2/: HW1_2.f90
Diffusion_problem/HW2/: Postprocess_Channel_flow.m  Transient_Laminar_Flow_FD_Code1_myVersion.f90  output.txt  qq  shear_stress_result_N32.txt  shear_stress_result_N8.txt
Diffusion_problem/HW2/Question_a/: output_N32.txt  output_N8.txt  result_N16.txt  result_N32.txt  result_N8.txt
Diffusion_problem/HW2/Question_b/: output_N16.txt
Diffusion_problem/HW2/Question_c/: shear_stress_result_N16.txt  shear_stress_result_N8.txt
Diffusion_problem/HW2/Question_d/: shear_stress_result_N16.txt  shear_stress_result_N32.txt
Diffusion_problem/HW3/: Transient_Laminar_Flow_FD_Code1_myVersion.f90  output.txt  plot_b.m
Diffusion_problem/HW3/Question_7_a/: README  Transient_Laminar_Flow_FD_Code1_myVersion.f90  plot_a.m  qq  relative_error.txt
Diffusion_problem/HW3/Question_7_b/: Transient_Laminar_Flow_FD_Code1_myVersion.f90  plot_b.m  velocity_1.txt  velocity_2.txt  velocity_3.txt  velocity_4.txt
Diffusion_problem/HW3/Question_7_c/: README  Transient_Laminar_Flow_FD_Code1_myVersion.f90  plot_c.m  round-off_1.txt  round-off_2.txt  round-off_3.txt  round-off_4.txt
Diffusion_problem/HW3/Question_8_a/: L1_error.txt  L1_error_0.2.txt  README  qq  (+5 more)
FDM/: Forward_Euler_scheme.f90  qq  result.txt
Project_1/: Advection_1D.f90  Benchmark  Benchmark_Lax-Wendroff.f90  CMakeLists.txt  find_slope.f90  plot_project_1.m  tmp.m  tmp_2.m
Project_3/Incomp2D_Project/: CMakeLists.txt  axycalc.f90  driver.f90  hxycalc.f90  output.f90  param.inc  press.f90  qhat.f90  sy.f90  trigon.f90  ufinal.f90
Project_3/Incomp2D_Project_v1/: CMakeLists.txt  axycalc.f90  driver.f90  fftpackt.f90  hxycalc.f90  output.f90  param.inc  press.f90  qhat.f90  trigon.f90
Project_3/Incomp2D_Project_v2/: CMakeLists.txt  Makefile  data.out  endrun.flo  fftcos.f90  fort.18  fort.19  fort.21  incomp2d  incomp2d.f90  param.inc
Project_Heat_Transfer_2D/: CMakeLists.txt
Project_Heat_Transfer_2D/Model_data/: mod_fft_data.f90  mod_param.f90  mod_variables.f90
Project_Heat_Transfer_2D/src/: Driver.f90  axycalc.f90  fftcos.f90  hxycalc.f90  output.f90  press.f90  qhat.f90  trigon.f90  ufinal.f90
(+31 files in other folders)
